improve caching all images feature

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -155,7 +155,7 @@
 "成功" = "成功";
 
 /* 设置页面 */
-"所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。";
+"所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。";
 
 /* 设置页面 */
 "打开邮箱失败" = "打开邮箱失败";
@@ -431,7 +431,6 @@
 /* 耗时任务处理过程提示框 */
 "处理中..." = "处理中...";
 
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "请等待更新完成或手动取消更新后，再尝试清除数据。";
 "全选" = "全选";
 "图片" = "图片";
 "卡片" = "卡片";
@@ -553,4 +552,14 @@
 "Copyright of Game Data" = "游戏相关数据版权";
 "Copyright of CGSSGuide" = "CGSSGuide版权";
 "Third-party Libraries" = "第三方库";
+
+"请等待更新完成或手动取消更新后，再尝试缓存图片。" = "请等待更新完成或手动取消更新后，再尝试缓存图片。";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "请等待更新完成或手动取消更新后，再尝试清除数据。";
+
+"卡片大图" = "卡片大图";
+"卡片头像" = "卡片头像";
+"角色头像" = "角色头像";
+"歌曲封面" = "歌曲封面";
+"活动封面" = "活动封面";
+"卡池封面" = "卡池封面";
 
