--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -151,7 +151,7 @@
 "成功" = "成功";
 
 /* 设置页面 */
-"所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "画像のサイズは合計で400MB以上です。wifi環境またはモバイルデータ通信量の残量を確認して、進んでください。";
+"所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "画像のサイズは合計で500MB以上です。wifi環境またはモバイルデータ通信量の残量を確認して、進んでください。";
 
 /* 设置页面 */
 "打开邮箱失败" = "fail to open mail";
@@ -430,7 +430,6 @@
 "处理中..." = "処理中...";
 
 /* 清除缓存时 选择具体的清除项 */
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください";
 "全选" = "全選択";
 "图片" = "画像";
 "卡片" = "カード";
@@ -565,3 +564,15 @@
 "Copyright of Game Data" = "游戏相关数据版权";
 "Copyright of CGSSGuide" = "CGSSGuide版权";
 "Third-party Libraries" = "第三方库";
+
+"请等待更新完成或手动取消更新后，再尝试缓存图片。" = "请等待更新完成或手动取消更新后，再尝试缓存图片。";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください";
+
+"卡片大图" = "卡片大图";
+"卡片头像" = "卡片头像";
+"角色头像" = "角色头像";
+"歌曲封面" = "歌曲封面";
+"活动封面" = "活动封面";
+"卡池封面" = "卡池封面";
+
+
