--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -157,7 +157,7 @@
 "成功" = "成功";
 
 /* 设置页面 */
-"所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "所有圖片總計超過400MB，請檢查您的網路環境或剩餘流量，確認無誤後再點選確定。";
+"所有图片总计超过500MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "所有圖片總計超過500MB，請檢查您的網路環境或剩餘流量，確認無誤後再點選確定。";
 
 /* 设置页面 */
 "打开邮箱失败" = "開啟郵箱失敗";
@@ -434,7 +434,6 @@
 "处理中..." = "處理中...";
 
 /* 清除缓存时 选择具体的清除项 */
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "請等待更新完成或手動取消更新後，再嘗試清除資料。";
 "全选" = "全選";
 "图片" = "圖片";
 "卡片" = "卡片";
@@ -548,3 +547,13 @@
 "Copyright of Game Data" = "遊戲相關資料版權";
 "Copyright of CGSSGuide" = "CGSSGuide版權";
 "Third-party Libraries" = "第三方庫";
+
+"请等待更新完成或手动取消更新后，再尝试缓存图片。" = "請等待更新完成或手動取消更新後，再嘗試快取圖片。";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "請等待更新完成或手動取消更新後，再嘗試清除資料。";
+
+"卡片大图" = "卡片大圖";
+"卡片头像" = "卡片頭像";
+"角色头像" = "角色頭像";
+"歌曲封面" = "歌曲封面";
+"活动封面" = "活動封面";
+"卡池封面" = "卡池封面";
