download and save beatmap bdb data

--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -555,6 +555,6 @@
 "卡片头像" = "Card Thumbnail";
 "角色头像" = "Character Thumbnail";
 "歌曲封面" = "Album Cover";
-"活动封面" = "Event Cover";
-"卡池封面" = "Gacha Cover";
+"活动封面" = "Event Banner";
+"卡池封面" = "Gacha Banner";
 
