using beatmap parsed from game data

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -307,9 +307,6 @@
 "编辑" = "編集";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
-
-/* 弹出框正文 */
 "获取到的live数据异常" = "取得したLIVEデータは異常です";
 
 /* 弹出框正文 */
@@ -575,4 +572,5 @@
 "活动封面" = "活动封面";
 "卡池封面" = "卡池封面";
 
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
