--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -310,7 +310,7 @@
 "编辑" = "编辑";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。";
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。";
 
 /* 弹出框正文 */
 "获取到的live数据异常" = "获取到的live数据异常";
