--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -306,9 +306,6 @@
 "编辑" = "Edit";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "Can't find the beatmap for the %@ difficulty. If an update is in progress, please wait for it to complete, or pull down to update manually.";
-
-/* 弹出框正文 */
 "获取到的live数据异常" = "Unable to download beatmap data.";
 
 /* 弹出框正文 */
@@ -557,4 +554,6 @@
 "歌曲封面" = "Album Cover";
 "活动封面" = "Event Banner";
 "卡池封面" = "Gacha Banner";
+
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "Can't find the beatmap. If an update is in progress, please wait for it to complete, or pull down to update manually.";
 
