--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -311,9 +311,6 @@
 "编辑" = "編輯";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "缺少難度為%@的歌曲,建議等待當前更新完成，或嘗試下拉歌曲列表手動更新數據。";
-
-/* 弹出框正文 */
 "获取到的live数据异常" = "獲取到的live數據異常";
 
 /* 弹出框正文 */
@@ -554,4 +551,6 @@
 "歌曲封面" = "歌曲封面";
 "活动封面" = "活動封面";
 "卡池封面" = "卡池封面";
+
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "未找到對應譜面，建議等待當前更新完成，或嘗試下拉歌曲列表手動更新資料。";
 
