--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -557,20 +557,19 @@
 "恢复失败" = "恢复失败";
 "您的当前账号未曾购买过去除广告服务。" = "您的当前账号未曾购买过去除广告服务。";
 "Data Sources" = "データソース";
-"Special Thanks to" = "特別鸣谢";
-"Copyright of Game Data" = "游戏相关数据版权";
-"Copyright of CGSSGuide" = "CGSSGuide版权";
-"Third-party Libraries" = "第三方库";
+"Special Thanks to" = "Special Thanks to";
+"Copyright of Game Data" = "Copyright of Game Data";
+"Copyright of CGSSGuide" = "Copyright of CGSSGuide";
+"Third-party Libraries" = "Third-party Libraries";
 
-"请等待更新完成或手动取消更新后，再尝试缓存图片。" = "请等待更新完成或手动取消更新后，再尝试缓存图片。";
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください";
+"请等待更新完成或手动取消更新后，再尝试缓存图片。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びキャッシュを行ってください。";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください。";
 
-"卡片大图" = "卡片大图";
-"卡片头像" = "卡片头像";
-"角色头像" = "角色头像";
-"歌曲封面" = "歌曲封面";
-"活动封面" = "活动封面";
-"卡池封面" = "卡池封面";
+"卡片大图" = "カードイラスト";
+"卡片头像" = "カードアイコン";
+"角色头像" = "キャラアイコン";
+"歌曲封面" = "楽曲ジャケット";
+"活动封面" = "イベントヘッダー";
+"卡池封面" = "ガシャヘッダー";
 
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
-
