--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -554,8 +554,8 @@
 "本程序是非官方程序，与官方应用\"アイドルマスターシンデレラガールズ スターライトステージ\"没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "本程序是非官方程序，与官方应用\"アイドルマスターシンデレラガールズ スターライトステージ\"没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\n\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。";
 "本程序基于MIT协议，详情请访问：" = "本程序基于MIT协议，详情请访问：";
 
-"恢复失败" = "恢复失败";
-"您的当前账号未曾购买过去除广告服务。" = "您的当前账号未曾购买过去除广告服务。";
+"恢复失败" = "復元失敗";
+"您的当前账号未曾购买过去除广告服务。" = "あなたのApple IDは課金アイテムを購入しておりませんでした。";
 "Data Sources" = "データソース";
 "Special Thanks to" = "Special Thanks to";
 "Copyright of Game Data" = "Copyright of Game Data";
@@ -572,4 +572,4 @@
 "活动封面" = "イベントヘッダー";
 "卡池封面" = "ガシャヘッダー";
 
-"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "対応するの楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
