--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -556,4 +556,6 @@
 "卡池封面" = "卡池封面";
 
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "未找到對應譜面，建議等待當前更新完成，或嘗試下拉歌曲列表手動更新資料。";
+"队伍中存在未知的技能类型，计算结果可能不准确。" = "隊伍中存在未知的技能型別，計算結果可能不準確。";
+
 
