--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -573,3 +573,5 @@
 "卡池封面" = "ガシャヘッダー";
 
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "対応するの楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
+
+"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未知なスキルタイプを存在します。計算結果の正しさは保証できません。";
