fix some error in new master+

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -310,9 +310,6 @@
 "编辑" = "编辑";
 
 /* 弹出框正文 */
-"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。";
-
-/* 弹出框正文 */
 "获取到的live数据异常" = "获取到的live数据异常";
 
 /* 弹出框正文 */
@@ -564,4 +561,11 @@
 "卡池封面" = "卡池封面";
 
 "队伍中存在未知的技能类型，计算结果可能不准确。" = "队伍中存在未知的技能类型，计算结果可能不准确。";
+
+/* new in 1.2.3 */
+// 歌曲筛选条件 原本的更新时间改为首次出现时间, 加入新条件变更时间倒序作为默认排序
+"变更时间" = "变更时间";
+"首次出现时间" = "首次出现时间";
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。";
+
 
