--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -576,7 +576,7 @@
 "队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未知なスキルタイプを存在します。計算結果の正しさは保証できません。";
 
 /* new in 1.2.3 */
-"变更时间" = "变更时间";
-"首次出现时间" = "首次出现时间";
-"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
+"变更时间" = "変更時間";
+"首次出现时间" = "初登場時間";
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの楽曲データが見つかりません。また、現時点に公式が譜面データを配布していません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
