--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -558,3 +558,13 @@
 "变更时间" = "變更時間";
 "首次出现时间" = "首次出現時間";
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "未找到對應譜面，建議等待當前更新完成，或嘗試下拉歌曲列表手動更新資料。如果更新後仍未找到，可能是官方還未更新此譜面。";
+
+/* new in 1.2.4 */
+// Skill Type: Concentration
+"专注" = "專注";
+
+// Skill Type: Mimic
+"模仿" = "模仿";
+
+// Skill Type: All Round
+"全才" = "全才";
