--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -569,3 +569,12 @@
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。";
 
 
+/* new in 1.2.4 */
+// Skill Type: Concentration
+"专注" = "专注";
+
+// Skill Type: Mimic
+"模仿" = "模仿";
+
+// Skill Type: All Round
+"全才" = "全才";
