--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -580,3 +580,13 @@
 "首次出现时间" = "初登場時間";
 "未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの楽曲データが見つかりません。また、現時点に公式が譜面データを配布していません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
+/* new in 1.2.4 */
+// Skill Type: Concentration
+"专注" = "专注";
+
+// Skill Type: Mimic
+"模仿" = "模仿";
+
+// Skill Type: All Round
+"全才" = "全才";
+
