--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -126,7 +126,7 @@
 "常规模式" = "通常モード";
 
 /* 队伍详情页面 */
-"平均分数(模拟)" = "平均ｽｺｱ(ｼﾐｭ)";
+"平均分数" = "平均ｽｺｱ";
 
 /* 卡片详情页 */
 "平均覆盖率%" = "平均ｶﾊﾞｰ率%";
@@ -136,9 +136,6 @@
 
 /* 生日提醒页面 */
 "开启生日通知提醒" = "誕生日の通知を行います";
-
-/* 队伍详情页面 */
-"开始计算" = "計算開始";
 
 /* 队伍详情页面 */
 "彩色曲" = "全ﾀｲﾌﾟ";
@@ -446,9 +443,6 @@
 /* 模拟抽卡页面 */
 "* 每张卡片的获取几率和官方公布数据一致" = "* カードごとの提供割合は公式が主張した確率と一致してます";
 
-/* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回シミュレートを行い平均値を計算しているため、結果は毎回異なります\n* 平均スコアはセンター効果による特技発動確率アップの影響を受けていません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています。";
-
 /* new in v1.2.0 */
 //"捐赠" = "寄付する";
 "支持作者" = "開発者を応援する";
@@ -589,4 +583,9 @@
 
 // Skill Type: All Round
 "全才" = "全才";
+
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 忽略技能触发率提升的队长技能\n* 模拟计算结果是1000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 忽略技能触发率提升的队长技能\n* 模拟计算结果是1000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
+
+"一般计算" = "一般计算";
+"模拟计算" = "模拟计算";
 
