--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -5,9 +5,6 @@
 /* 模拟抽卡页面 */
 "* 每张卡片的获取几率和官方公布数据一致" = "每張卡片的獲取機率和官方公佈資料一致";
 
-/* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限和平均分數中所有點為Perfect評價\n* 極限分數中所有技能100%觸發\n* 平均分數採用100次真實模擬後求平均值的方法，每次計算會略有不同\n* 平均分數沒有計算技能觸發率提升的隊長技能帶來的影響\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
-
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuide問題反饋";
 
@@ -132,7 +129,7 @@
 "常规模式" = "常規模式";
 
 /* 队伍详情页面 */
-"平均分数(模拟)" = "平均分數(模擬)";
+"平均分数" = "平均分數";
 
 /* 卡片详情页 */
 "平均覆盖率%" = "平均覆蓋率%";
@@ -142,9 +139,6 @@
 
 /* 生日提醒页面 */
 "开启生日通知提醒" = "開啟生日通知提醒";
-
-/* 队伍详情页面 */
-"开始计算" = "開始計算";
 
 /* 队伍详情页面 */
 "彩色曲" = "彩色曲";
@@ -571,4 +565,9 @@
 
 // Skill Type: All Round
 "全才" = "全才";
+
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 忽略技能触发率提升的队长技能\n* 模拟计算结果是1000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 全部note為Perfect評價，小屋加成為10%\n* 極限分數中所有技能100%觸發\n* 極限分數1中note取Perfect判定±0.06秒中的最優值，極限分數2和其他分數都不考慮此項因素\n* 忽略技能觸發率提升的隊長技能\n* 模擬計算結果是1000次模擬後取前x%內的最低分數得出，每次結果會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
+
+"一般计算" = "一般計算";
+"模拟计算" = "模擬計算";
 
