update localization strings and fix a bug that in 12.9 inch iPad filter page slide back without any gesture

--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -47,9 +47,6 @@
 /* 技能触发几率的简写 */
 "低" = "Low";
 
-/* 角色信息页面 */
-"体重" = "Weight";
-
 /* 队伍详情页面 */
 "使用固定值" = "Use Custom Appeal";
 
@@ -345,9 +342,6 @@
 /* 队伍详情页面 */
 "请选择歌曲" = "Select Song";
 
-/* 角色信息页面 */
-"身高" = "Height";
-
 /* 卡片详情页 */
 "进化信息" = "Awakening";
 
@@ -486,7 +480,7 @@
 "全部" = "All";
 "低确率" = "Low";
 "中确率" = "Med.";
-"高确率" = "Hight";
+"高确率" = "High";
 
 "待定" = "TBD";
 "上位" = "Upper Card";
