--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -46,9 +46,6 @@
 /* 技能触发几率的简写 */
 "低" = "低";
 
-/* 角色信息页面 */
-"体重" = "体重";
-
 /* 队伍详情页面 */
 "使用固定值" = "固定アピール値を使用";
 
@@ -346,9 +343,6 @@
 /* 队伍详情页面 */
 "请选择歌曲" = "曲を選んでください";
 
-/* 角色信息页面 */
-"身高" = "身長";
-
 /* 卡片详情页 */
 "进化信息" = "特訓情報";
 
@@ -586,6 +580,6 @@
 
 "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 忽略技能触发率提升的队长技能\n* 模拟计算结果是1000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* スコアは全PERFECT＆ルームアイテムLv.10として計算しています\n* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* 特技発動確率アップのセンター効果は無視しています\n* シミュレート計算は1000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 
-"一般计算" = "一般计算";
-"模拟计算" = "模拟计算";
+"一般计算" = "一般計算";
+"模拟计算" = "シミュレート計算";
 
