--- a/CGSSGuide/zh-Hant.lproj/InfoPlist.strings
+++ b/CGSSGuide/zh-Hant.lproj/InfoPlist.strings
@@ -7,3 +7,7 @@
 */
 
 NSPhotoLibraryUsageDescription = "請允許本程式將圖片儲存至您的相簿，隨後您也可以在系統設定中隨時修改。";
+shortcutItemTitle1 = "卡片";
+shortcutItemTitle2 = "譜面";
+shortcutItemTitle3 = "活動";
+shortcutItemTitle4 = "模擬抽卡";
