--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -65,7 +65,7 @@
 "出生地" = "出身地";
 
 /* 模拟抽卡页面 */
-"十连" = "１０回引く";
+"十连" = "10回引く";
 
 /* 模拟抽卡页面 */
 "单抽" = "１回引く";
@@ -405,7 +405,7 @@
 "Combo加成" = "コンボボーナス";
 
 /* 技能类型 */
-"无技能" = "スキルなし";
+"无技能" = "特技なし";
 
 /* 技能类型 */
 "分数加成" = "スコアアップ";
@@ -505,7 +505,7 @@
 "限定卡池" = "限定ガシャ";
 "FES限定卡池" = "FES限ガシャ";
 "单属性卡池" = "タイプセレクト";
-"普通卡池" = "通常ガシャ";
+"普通卡池" = "恒常ガシャ";
 
 
 /* new in v1.2.0(7+) */
@@ -586,8 +586,8 @@
 
 /* new in 1.2.5 */
 // used in 3d touch peek menu
-"收藏" = "收藏";
-"取消收藏" = "取消收藏";
-"Skill Boost" = "技能增强";
+"收藏" = "ブクマする";
+"取消收藏" = "ブクマを取り消す";
+"Skill Boost" = "スキルブースト";
 
 
