--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -590,4 +590,9 @@
 "取消收藏" = "ブクマを取り消す";
 "Skill Boost" = "スキルブースト";
 
-
+/* new in 1.2.6 */
+// new controller for not detail
+"随机单次模拟" = "随机单次模拟";
+"显示模式" = "显示模式";
+"选择模式" = "选择模式";
+"得分详情" = "得分详情";
