--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -579,3 +579,11 @@
 "取消收藏" = "取消收藏";
 "Skill Boost" = "技能增强";
 
+/* new in 1.2.6 */
+// new controller for not detail
+"随机单次模拟" = "随机单次模拟";
+"显示模式" = "显示模式";
+"选择模式" = "选择模式";
+"得分详情" = "得分详情";
+
+
