--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -571,3 +571,10 @@
 "取消收藏" = "取消收藏";
 "Skill Boost" = "技能增強";
 
+/* new in 1.2.6 */
+// new controller for not detail
+"随机单次模拟" = "隨機單次模擬";
+"显示模式" = "顯示模式";
+"选择模式" = "選擇模式";
+"得分详情" = "得分詳情";
+
