--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -576,6 +576,8 @@
 /* new in 1.2.6 */
 // new controller for not detail
 "随机单次模拟" = "Random Simulation Result";
-"显示模式" = "Mode";
+"模式" = "Mode";
 "选择模式" = "Select Mode";
 "得分详情" = "Score Detail";
+"出现率" = "Ratio";
+
