support for focus series skill, refactor LiveSimulator

--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -592,3 +592,7 @@
 // score detail table footer
 "基础分" = "Base Score";
 "总分" = "Total Score";
+
+"Cute集中" = "Cute Focus";
+"Cool集中" = "Cool Focus";
+"Passion集中" = "Passion Focus";
