--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -588,3 +588,8 @@
 // score detail table footer
 "基础分" = "基礎分";
 "总分" = "總分";
+
+"Cute集中" = "Cute集中";
+"Cool集中" = "Cool集中";
+"Passion集中" = "Passion集中";
+
