--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -593,6 +593,4 @@
 "基础分" = "Base Score";
 "总分" = "Total Score";
 
-"Cute集中" = "Cute Focus";
-"Cool集中" = "Cool Focus";
-"Passion集中" = "Passion Focus";
+"集中" = "Focus";
