--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -203,7 +203,7 @@
 "星座" = "星座";
 
 /* 卡片详情页 */
-"普池" = "通常ガシャ";
+"普池" = "恒常ガシャ";
 
 /* 设置页面 */
 "暂无需要缓存的图片，请先尝试更新其他数据。" = "キャッシュが必要な画像はありません。データの更新を試してみてください。";
@@ -592,10 +592,10 @@
 
 /* new in 1.2.6 */
 // new controller for score detail
-"随机单次模拟" = "随机单次模拟";
-"模式" = "模式";
-"选择模式" = "选择模式";
-"得分详情" = "得分详情";
+"随机单次模拟" = "ランダム一回シミュレート";
+"模式" = "モード";
+"选择模式" = "モードを選んでください";
+"得分详情" = "得点情報";
 "出现率" = "出現率";
 
 // score detail table header (length sensitive)
@@ -603,14 +603,14 @@
 "P分" = "ｽｺｱﾎﾞｰﾅｽ";
 "C分" = "ｺﾝﾎﾞﾎﾞｰﾅｽ";
 "SB" = "ｽｷﾙﾌﾞｰｽﾄ";
-"得分" = "ｽｺﾞｱ";
+"得分" = "ｽｺｱ";
 "累计" = "合計";
 
 // score detail table footer
-"基础分" = "基础分";
-"总分" = "总分";
+"基础分" = "基本スコア";
+"总分" = "合計";
 
-"集中" = "集中";
+"集中" = "フォーカス";
 
 
 
