--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
-"* 每张卡片的获取几率和官方公布数据一致" = "每張卡片的獲取機率和官方公佈資料一致";
+"* 每张卡片的获取几率和官方公布数据一致" = "* 每張卡片的獲取機率和官方公佈資料一致";
 
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuide問題反饋";
