minor fix for the unnecessary reloading of live selection or card modifying in team detail page update localization

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -613,7 +613,7 @@
 "流行曲" = "流行曲";
 
 /* new in 1.2.8 */
-"最大Notes数" = "最大Notes数";
+"最多Note数" = "最多Note数";
 
 "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* スコアは全PERFECT＆ルームアイテムLv.10として計算しています\n* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 
