--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -604,6 +604,8 @@
 /* new in 1.2.7 */
 "流行曲" = "流行曲";
 
-/* new in 1.2.8 */
+/* new in 1.3.0 */
 "最多Note数" = "最多Note数";
-
+"使用后援值" = "使用后援值";
+"队伍信息" = "队伍信息";
+"辅助技能详情" = "辅助技能详情";
