move old team information into team information tab and redesign

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -606,6 +606,7 @@
 
 /* new in 1.3.0 */
 "最多Note数" = "最多Note数";
-"使用后援值" = "使用后援值";
+"使用后援表现值" = "使用后援表现值";
 "队伍信息" = "队伍信息";
 "辅助技能详情" = "辅助技能详情";
+"极限模式" = "极限模式";
