--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -595,6 +595,8 @@
 "流行曲" = "流行曲";
 
 /* new in 1.3.0 */
-"最多Note数" = "最多Note数";
-
-
+"最多Note数" = "最多Note數";
+"使用后援表现值" = "使用後援表現值";
+"队伍信息" = "隊伍資訊";
+"辅助技能详情" = "輔助技能詳情";
+"极限模式" = "極限模式";
