add support for filtering song by difficulties other than max difficulty

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -464,7 +464,6 @@
 "排序" = "排序";
 
 "常规歌曲" = "常规歌曲";
-"最大难度" = "最大难度";
 
 "已付声" = "已付声";
 "未付声" = "未付声";
@@ -605,7 +604,7 @@
 "流行曲" = "流行曲";
 
 /* new in 1.3.0 */
-"最多Note数" = "最多Note数";
+"note数" = "note数";
 "使用后援表现值" = "使用后援表现值";
 "队伍信息" = "队伍信息";
 "辅助技能详情" = "辅助技能详情";
