--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -471,7 +471,6 @@
 "排序" = "ソート";
 
 "常规歌曲" = "通常曲";
-"最大难度" = "難易度";
 
 "已付声" = "ＣＶあり";
 "未付声" = "ＣＶなし";
@@ -613,7 +612,7 @@
 "流行曲" = "流行曲";
 
 /* new in 1.3.0 */
-"最多Note数" = "最多Note数";
+"note数" = "note数";
 "使用后援表现值" = "使用后援表现值";
 "队伍信息" = "队伍信息";
 "辅助技能详情" = "辅助技能详情";
