--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -457,7 +457,6 @@
 "排序" = "排序";
 
 "常规歌曲" = "常規歌曲";
-"最大难度" = "最大難度";
 
 "已付声" = "已付聲";
 "未付声" = "未付聲";
@@ -595,7 +594,7 @@
 "流行曲" = "流行曲";
 
 /* new in 1.3.0 */
-"最多Note数" = "最多Note數";
+"note数" = "Note數";
 "使用后援表现值" = "使用後援表現值";
 "队伍信息" = "隊伍資訊";
 "辅助技能详情" = "輔助技能詳情";
