add support for unnotification

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -609,3 +609,8 @@
 "队伍信息" = "队伍信息";
 "辅助技能详情" = "辅助技能详情";
 "极限模式" = "极限模式";
+"还没有队伍，点击右上＋创建一个吧" = "还没有队伍，点击右上＋创建一个吧";
+
+"偶像生日提醒" = "偶像生日提醒";
+"生日快乐!!" = "生日快乐!!";
+"%@收到了你的祝福" = "%@收到了你的祝福";
