--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -594,8 +594,14 @@
 "流行曲" = "流行曲";
 
 /* new in 1.3.0 */
-"note数" = "Note數";
+"note数" = "note數";
 "使用后援表现值" = "使用後援表現值";
 "队伍信息" = "隊伍資訊";
 "辅助技能详情" = "輔助技能詳情";
 "极限模式" = "極限模式";
+"还没有队伍，点击右上＋创建一个吧" = "還沒有隊伍，點選右上＋建立一個吧";
+
+"偶像生日提醒" = "偶像生日提醒";
+"生日快乐!!" = "生日快樂!!";
+"%@收到了你的祝福" = "%@收到了你的祝福";
+
