--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -613,16 +613,16 @@
 
 /* new in 1.3.0 */
 "note数" = "note数";
-"使用后援表现值" = "使用后援表现值";
-"队伍信息" = "队伍信息";
-"辅助技能详情" = "辅助技能详情";
-"极限模式" = "极限模式";
-"还没有队伍，点击右上＋创建一个吧" = "还没有队伍，点击右上＋创建一个吧";
+"使用后援表现值" = "サポートアピール";
+"队伍信息" = "ユニット情報";
+"辅助技能详情" = "他の特技情報";
+"极限模式" = "極限モード";
+"还没有队伍，点击右上＋创建一个吧" = "＋ボタンでユニットを登録しましょう";
 
 "偶像生日提醒" = "アイドル誕生日通知";
-"生日快乐!!" = "生日快乐!!";
-"%@收到了你的祝福" = "%@收到了你的祝福";
+"生日快乐!!" = "ご誕生日おめでとうございます！";
+"%@收到了你的祝福" = "%@はあなたの祝福を受け取っています";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* スコアは全PERFECT＆ルームアイテムLv.10として計算しています\n* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* スコアは全PERFECT＆ルームアイテムLv.10として計算しています\n* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";  
 
 
