add advance options to live simulator page

--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -557,7 +557,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* 全部note為Perfect評價，小屋加成為10%\n* 極限分數中所有技能100%觸發\n* 極限分數1中note取Perfect判定±0.06秒中的最優值，極限分數2和其他分數都不考慮此項因素\n* 模擬計算結果是10000次模擬後取前x%內的最低分數得出，每次結果會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響\n* 一般計算中不考慮當生命值不足時，過載技能無法發動的因素；模擬計算中考慮此因素";
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 全部note為Perfect評價，小屋加成為10%\n* 極限分數中所有技能100%觸發\n* 極限分數1中note取Perfect判定±0.06秒中的最優值，極限分數2和其他分數都不考慮此項因素\n* 模擬計算結果是10000次模擬後取前x%內的最低分數得出，每次結果會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
 
 "一般计算" = "一般計算";
 "模拟计算" = "模擬計算";
@@ -604,4 +604,7 @@
 "偶像生日提醒" = "偶像生日提醒";
 "生日快乐!!" = "生日快樂!!";
 "%@收到了你的祝福" = "%@收到了你的祝福";
+
+"高级选项" = "高階選項";
+"模拟计算中生命不足时不发动过载技能" = "模擬計算中生命不足時不發動過載技能";
 
