--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -567,7 +567,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素";
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
 
 "一般计算" = "一般计算";
 "模拟计算" = "模拟计算";
@@ -614,3 +614,6 @@
 "偶像生日提醒" = "偶像生日提醒";
 "生日快乐!!" = "生日快乐!!";
 "%@收到了你的祝福" = "%@收到了你的祝福";
+
+"高级选项" = "高级选项";
+"模拟计算中生命不足时不发动过载技能" = "模拟计算中生命不足时不发动过载技能";
