--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -560,7 +560,7 @@
 // Skill Type: All Round
 "全才" = "All Round";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\n* 一般计算中不考虑当生命值不足时，过载技能无法发动的因素；模拟计算中考虑此因素" = "* Simulation assumes all notes are Perfect, room bonus is 10%.\n* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note from Perfect ±0.06 sec. In optimistic score 2 and other results, this factor is ignored.\n* The simulation result is taken from 10000 real simulations. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.\n* In \"Calculate\", it ignores the fact that overload skills can not proc when life points are not enough, but in \"Simulate\" it does not ignore that fact.";
+"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Simulation assumes all notes are Perfect, room bonus is 10%.\n* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note from Perfect ±0.06 sec. In optimistic score 2 and other results, this factor is ignored.\n* The simulation result is taken from 10000 real simulations. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
 
 "一般计算" = "Calculate";
 "模拟计算" = "Simulate";
@@ -614,4 +614,8 @@
 "偶像生日提醒" = "Birthday Notification";
 "生日快乐!!" = "Happy birthday!!";
 "%@收到了你的祝福" = "%@ received your blessing";
+
+"高级选项" = "Advance Options";
+"模拟计算中生命不足时不发动过载技能" = "Simulation considers overload skill's trigger condition";
+
 
