add more advance options and score distribution

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -567,7 +567,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
 
 "一般计算" = "一般计算";
 "模拟计算" = "模拟计算";
@@ -617,3 +617,12 @@
 
 "高级选项" = "高级选项";
 "模拟计算中生命不足时不发动过载技能" = "模拟计算中生命不足时不发动过载技能";
+
+/* new in 1.3.2 */
+"得分分布" = "得分分布";
+"Great占比%" = "Great占比%";
+"小屋加成%" = "小屋加成%";
+"模拟次数" = "模拟次数";
+"* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
+"至少进行一次模拟计算之后才能查看得分分布" = "至少进行一次模拟计算之后才能查看得分分布";
+
