--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -560,7 +560,7 @@
 // Skill Type: All Round
 "全才" = "All Round";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Simulation assumes all notes are Perfect, room bonus is 10%.\n* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note from Perfect ±0.06 sec. In optimistic score 2 and other results, this factor is ignored.\n* The simulation result is taken from 10000 real simulations. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Optimistic score assumes that skills always activate.\n* In optimistic score 1, it takes the best score of each note from Perfect ±0.06 sec\n* The simulation result is taken from the lowest score of simulation times' top x%. Results will vary between simulations.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
 
 "一般计算" = "Calculate";
 "模拟计算" = "Simulate";
