--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -623,9 +623,12 @@
 "生日快乐!!" = "ご誕生日おめでとうございます！";
 "%@收到了你的祝福" = "%@はあなたの祝福を受け取っています";
 
-"* 全部note为Perfect评价，小屋加成为10%\n* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值，极限分数2和其他分数都不考虑此项因素\n* 模拟计算结果是10000次模拟后取前x%内的最低分数得出，每次结果会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* スコアは全PERFECT＆ルームアイテムLv.10として計算しています\n* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 "高级选项" = "アドバンスオプション";
 "模拟计算中生命不足时不发动过载技能" = "シミュ計算にオバロ発動条件を考える";
+
+/* new in 1.3.2 */
+
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 
 
 
