--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -608,3 +608,12 @@
 "高级选项" = "高階選項";
 "模拟计算中生命不足时不发动过载技能" = "模擬計算中生命不足時不發動過載技能";
 
+/* new in 1.3.2 */
+
+"得分分布" = "得分分佈";
+"Great占比%" = "Great佔比%";
+"小屋加成%" = "小屋加成%";
+"模拟次数" = "模擬次數";
+"* 不含后援值，歌曲模式为常规模式" = "* 不含後援值，歌曲模式為常規模式";
+"至少进行一次模拟计算之后才能查看得分分布" = "至少進行一次模擬計算之後才能檢視得分分佈";
+
