--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -630,11 +630,11 @@
 
 "* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 
-"得分分布" = "得分分布";
-"Great占比%" = "Great占比%";
-"小屋加成%" = "小屋加成%";
-"模拟次数" = "模拟次数";
-"* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
-"至少进行一次模拟计算之后才能查看得分分布" = "至少进行一次模拟计算之后才能查看得分分布";
+"得分分布" = "スコア確率分布";
+"Great占比%" = "GREAT割合%";
+"小屋加成%" = "ﾙｰﾑｱｲﾃﾑボーナス%";
+"模拟次数" = "シミュレート回数";
+"* 不含后援值，歌曲模式为常规模式" = "* 通常モードのサポートアピール含んでない数値です";
+"至少进行一次模拟计算之后才能查看得分分布" = "調べる前にまず一回シミュレート計算して下さい";
 
 
