--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -625,4 +625,4 @@
 "模拟次数" = "模拟次数";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
 "至少进行一次模拟计算之后才能查看得分分布" = "至少进行一次模拟计算之后才能查看得分分布";
-
+"* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确";
