--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -636,5 +636,5 @@
 "模拟次数" = "シミュレート回数";
 "* 不含后援值，歌曲模式为常规模式" = "* 通常モードのサポートアピール含んでない数値です";
 "至少进行一次模拟计算之后才能查看得分分布" = "調べる前にまず一回シミュレート計算して下さい";
-
+"* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* このチャートはスコア確率分布の近接確率密度の曲線グラフです。グラフ精度とシミュレート回数は正の相関関係です。";
 
