--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -616,4 +616,4 @@
 "模拟次数" = "模擬次數";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含後援值，歌曲模式為常規模式";
 "至少进行一次模拟计算之后才能查看得分分布" = "至少進行一次模擬計算之後才能檢視得分分佈";
-
+"* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* 本圖是得分分佈的近似概率密度曲線，模擬次數越多越精確";
