--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -626,3 +626,8 @@
 "* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
 "至少进行一次模拟计算之后才能查看得分分布" = "至少进行一次模拟计算之后才能查看得分分布";
 "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确";
+
+/* new in 1.4.0 */
+"队伍模板" = "队伍模板";
+"编辑队伍" = "编辑队伍";
+
