improve team editing page

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -632,3 +632,5 @@
 "编辑队伍" = "编辑队伍";
 "默认潜能等级" = "默认潜能等级";
 "默认特技等级" = "默认特技等级";
+"最近使用" = "最近使用";
+"* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级" = "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级";
