add a new option to team editing advance options for including guest leader in recent used idols, default is on

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -634,3 +634,5 @@
 "默认特技等级" = "默认特技等级";
 "最近使用" = "最近使用";
 "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级" = "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级";
+"最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
+
