recent used idols can also be modified, modifying it will update all the teams those contains this idol

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -633,6 +633,6 @@
 "默认潜能等级" = "默认潜能等级";
 "默认特技等级" = "默认特技等级";
 "最近使用" = "最近使用";
-"* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级" = "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级";
+"* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级\n* 最近使用中将潜能和特技等级相同的同一张卡视作同一偶像，长按编辑会更新所有关联队伍" = "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级\n* 最近使用中将潜能和特技等级相同的同一张卡视作同一偶像，长按编辑会更新所有关联队伍";
 "最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
 
