--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -633,6 +633,10 @@
 "默认潜能等级" = "默认潜能等级";
 "默认特技等级" = "默认特技等级";
 "最近使用" = "最近使用";
-"* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级\n* 最近使用中将潜能和特技等级相同的同一张卡视作同一偶像，长按编辑会更新所有关联队伍" = "* 双击从全部偶像中选择\n* 长按编辑潜能和特技等级\n* 最近使用中将潜能和特技等级相同的同一张卡视作同一偶像，长按编辑会更新所有关联队伍";
-"最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
 
+"最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
+"修改最近使用中的偶像潜能同步到同角色所有卡片" = "修改最近使用中的偶像潜能同步到同角色所有卡片";
+
+"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）";
+
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级";
